--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -16,12 +16,12 @@ body {
     padding: 5px;
     border-bottom: 1px solid #ccc;
 }
-.rpi > div.rpikey {
+.rpi  div.rpikey {
     width: 30%;
     max-width: 150px;
     display: inline-block;
 }
-.rpi > div.rpivalue {
+.rpi  div.rpivalue {
     width: 70%;
     min-width: 150px;
     display: inline-block;
