--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -18,12 +18,13 @@ body {
 }
 .rpi  div.rpikey {
     width: 30%;
+    min-width: 29%;
     max-width: 150px;
     display: inline;
 }
 .rpi  div.rpivalue {
     width: 70%;
-    min-width: 150px;
+    min-width: 69%;
     display: inline;
 }
 .rpi > .rpi-sn {
