--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -4,9 +4,13 @@ body {
    padding: 0;
 
 }
+.rpi-list {
+    display: flex;
+    width: 100%;
+}
 .rpi {
-    width: 310px;
-    min-width: 310px;
+    width: 250px;
+    min-width: 250px;
     margin: 12px;
     background-color:antiquewhite;
 }
