--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -29,6 +29,20 @@ body {
     align-items: stretch;
     width: 100%;
 }
+.rpi-header {
+    padding: 5px 0;
+    width: 100%;
+    border: none;
+    display:block;
+    text-align:center;
+}
+.rpi-status {
+    padding: 0 0 0 10px;
+    width: 100%;
+    border: none;
+    display:block;
+    text-align:center;
+}
 .rpi  div.rpikey {
     padding: 0 10px 0 10px;
     width: 100px;
