--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -32,7 +32,8 @@ body {
 .rpi > div.rpi-header {
     padding: 5px 0;
     width: 100%;
-    border: none;
+    font-weight: bold;
+    border-bottom: 2px solid #aaa;
     display:block;
     text-align:center;
 }
