--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -38,7 +38,7 @@ body {
     text-align:center;
 }
 .rpi > div.rpi-status {
-    padding: 0 0 0 10px;
+    padding: 10px 0 0 10px;
     width: 100%;
     border: none;
     display:block;
