--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -37,12 +37,13 @@ body {
     display:block;
     text-align:center;
 }
-.rpi > div.rpi-status {
+.rpi div.rpi-status {
     padding: 10px 0;
     width: 100%;
     border: none;
     display:block;
     text-align:center;
+    background-color: #ccc;
 }
 .rpi  div.rpikey {
     padding: 0 10px 0 10px;
