--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -59,5 +59,7 @@ body {
     font-weight: bold;
 }
 #rpi-details > article {
-    width: 250px;;
+    width: 300px;
+    margin: 6px;
+    padding: 6px;
 }
