--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -62,5 +62,9 @@ body {
     width: 300px;
     margin: 6px;
     padding: 6px;
-    text-align:center;
+}
+#rpi-details > article > header {
+   width: 100%;
+   text-align: center;
+   background-color:aquamarine;
 }
