--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -93,6 +93,7 @@ article form.subform {
 }
 #rpi_body, 
 #localdata_body,
-#wlan_nets_body {
+#wlan_nets_body,
+#apconfig_body {
     display: none;
 }
