--- a/public/css/rpi.css
+++ b/public/css/rpi.css
@@ -16,6 +16,7 @@ body {
     max-width: 270px;
     margin: 12px;
     padding: 5px;
+    display: none;
 }
 .rpi-online {
     background-color:antiquewhite;
